Thu Nov 25 14:42:39 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * tests/IDL_Test/NonTopic_Connector/NonTopic_Connector.mpc:
        * tests/IDL_Test/NonTopic_Connector/NonTopic_Connector_T.cpp:
        * tests/IDL_Test/NonTopic_Connector/NonTopic_Connector_T.h:
        Add extra include. Remove empty lines.


Thu Nov 25 14:03:39 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * tests/IDL_Test/NonTopic_Connector/nontopic_test.idl:
        * tests/IDL_Test/NonTopic_Connector/NonTopic_Connector.mpc:
        * tests/IDL_Test/NonTopic_Connector/NonTopic_Connector.idl:
        * tests/IDL_Test/NonTopic_Connector/NonTopic_Connector_T.h:
        * tests/IDL_Test/NonTopic_Connector/NonTopic_Connector_T.cpp:
        Changed after TAO_IDL change .


Thu Nov 25 13:52:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Get_T.h:
        * connectors/dds4ccm/impl/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/DDS_Listen_T.h:
        * connectors/dds4ccm/impl/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/DDS_Read_T.h:
        * connectors/dds4ccm/impl/DDS_Read_T.cpp:
        * connectors/dds4ccm/impl/DDS_StateListen_T.h:
        * connectors/dds4ccm/impl/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.h:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DataReaderHandler_T.h:
        * connectors/dds4ccm/impl/DataReaderHandler_T.cpp:
        * connectors/dds4ccm/impl/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/DataReaderStateListener_T.h:
        * connectors/dds4ccm/impl/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/Getter_T.h: