@@ -1,3 +1,13 @@
+Thu Nov 25 19:57:29 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDS_Base_Connector_T.h:
+        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
+        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
+        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.cpp:
+          Rewritten initialization and removal of the domain participant. When
+          derived from (Topic)Base one can use these methods in order to use
+          ones own domain participant.
+
 Thu Nov 25 14:42:39 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>
 
         * tests/IDL_Test/NonTopic_Connector/NonTopic_Connector.mpc:
